--- a/app/client/src/components/alerta.css
+++ b/app/client/src/components/alerta.css
@@ -1,19 +1,31 @@
-.Card{
-    margin-top: 0%;
+.Card {
+    margin-top: 100px;
     position: relative;
-    width: 450px;
-    height: 250px;
     background-color: #151719;
     border-radius: 30px;
-    box-shadow: 0 0 90px #5658dd;
+    box-shadow: 0 0 80px #5658dd;
     transition: 0.5 linear;
     justify-content: center;
     align-items: center;
     display: flex;
     font-size: 1rem;
-    padding: 20px;
+    padding: 50px;
 }
-.Carde{
+
+.Card1 {
+    position: relative;
+    background-color: #151719;
+    border-radius: 30px;
+    box-shadow: 0 0 80px #5658dd;
+    transition: 0.5 linear;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-size: 1rem;
+    padding: 50px;
+}
+
+.Carde {
     margin-top: 30%;
     position: relative;
     width: 450px;
@@ -27,16 +39,44 @@
     font-size: 1rem;
     padding: 20px;
 }
-.texto{
+
+.texto {
     color: #dadff0;
+    font-size: 30px;
 }
 
-/* .btn{
-    background-color: #5658dd;
-    padding: 10px;
-    margin: 10px;
+.texto1 {
     color: #dadff0;
-} */
-.espaco{
+    font-size: 30px;
+}
+
+.espaco {
     padding: 80px;
+}
+
+.botao1 {
+    margin-top: 80px;
+    width: 400px;
+    height: 100px;
+    font-weight: bold;
+    font-size: 40px;
+    background-color: #353558;
+    border-radius: 15px;
+    color: #dfdfdf;
+    padding: 10px;
+}
+
+.botao1:hover {
+    background-color: #5658dd;
+}
+
+.detect {
+    color: #dadff0;
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.rodrigo{
+    margin-right: 80px;
+    text-align: center;
 }
