(NÃO FINALIZADO) estiliza página do registro de alertas

--- a/app/client/src/components/semCapacete.css
+++ b/app/client/src/components/semCapacete.css
@@ -50,6 +50,13 @@
     font-size: 30px;
 }
 
+.texto2 {
+    color: #dadff0;
+    font-size: 20px;
+    margin-bottom: 20px;
+
+}
+
 .espaco {
     padding: 80px;
 }
