--- a/app/client/src/components/header.css
+++ b/app/client/src/components/header.css
@@ -4,7 +4,7 @@
     border-radius: 5px;
     font-size: 1rem;
     padding: 10px;
-    margin-top: 50px;
+    /* margin-top: 50px; */
 }
 .botao:hover{
     background-color: #5658dd; 
