--- a/app/client/src/pages/Alerts.css
+++ b/app/client/src/pages/Alerts.css
@@ -1,4 +1,8 @@
 
+h1{
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+}
+
 .botao{
   background-color: #353558; 
   color: #dfdfdf;
